@@ -1,6 +1,9 @@
+# this .htaccess file will silently redirect users to the html folder
+# where additional rewrite actions happen
+# ----------------------------------------------------------------------------
 <IfModule mod_rewrite.c>
 	RewriteEngine On
-	# Sometimes RewriteBase is needed to set correct document root
+	# Sometimes RewriteBase is needed to set correct document root to /
 	# RewriteBase /
 	RewriteRule ^$		html/	[L]
 	RewriteRule (.*)	html/$1	[L]
